Add an example for parallel edge collapse with Polyhedron_3

--- a/Surface_mesh_simplification/examples/Surface_mesh_simplification/CMakeLists.txt
+++ b/Surface_mesh_simplification/examples/Surface_mesh_simplification/CMakeLists.txt
@@ -82,4 +82,7 @@ endif()
 if(METIS_FOUND)
   create_single_source_cgal_program( "parallel_edge_collapse.cpp" )
   target_link_libraries( parallel_edge_collapse ${METIS_LIBRARIES} )
+
+create_single_source_cgal_program( "parallel_edge_collapse_Polyhedron.cpp" )
+  target_link_libraries( parallel_edge_collapse_Polyhedron ${METIS_LIBRARIES} )
 endif()
