--- a/Polygon_mesh_processing/examples/Polygon_mesh_processing/CMakeLists.txt
+++ b/Polygon_mesh_processing/examples/Polygon_mesh_processing/CMakeLists.txt
@@ -133,6 +133,6 @@ endif(OpenMesh_FOUND)
 
 if(METIS_FOUND)
   create_single_source_cgal_program( "partition_example.cpp" )
-  target_link_libraries( partition_example ${METIS_LIBRARIES} )
+  target_link_libraries( partition_example PRIVATE ${METIS_LIBRARIES} )
 endif()
 
